--- a/preseed.cfg
+++ b/preseed.cfg
@@ -51,10 +51,10 @@ d-i partman-auto-lvm/guided_size string max
 d-i mirror/http/proxy string
 
 # Default user, change
-d-i passwd/user-fullname string kappataumu
-d-i passwd/username string kappataumu
-d-i passwd/user-password password kappataumu
-d-i passwd/user-password-again password kappataumu
+d-i passwd/user-fullname string user
+d-i passwd/username string user
+d-i passwd/user-password password letmein
+d-i passwd/user-password-again password letmein
 d-i user-setup/encrypt-home boolean false
 d-i user-setup/allow-password-weak boolean true
 
